--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -93,7 +93,7 @@ button:disabled {
   height: 100vh;
   color: white;
   background: #333744;
-  width: 225px;
+  width: 300px;
   overflow-y: scroll;
 }
 
@@ -104,6 +104,7 @@ button:disabled {
   display: flex;
   flex-direction: column;
   max-height: 100vh;
+  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 
 .chat__messages {
@@ -116,6 +117,7 @@ button:disabled {
 
 .message {
   margin-bottom: 16px;
+  background-color: white;
 }
 
 .message__name {
